--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=http://xccwp.owo.vin
+VITE_API_URL=http://xccwp.owo.vin/prod-api
 VITE_QQ_AVATAR_URL=https://q1.qlogo.cn/g
 VITE_DEFAULT_LOCALE=zh-CN
